--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -26,6 +27,7 @@
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "dialog": "^0.3.1",
+    "express": "^4.19.2",
     "firebase": "^11.0.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
