--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "node server.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -27,7 +27,7 @@
     "aos": "^2.3.4",
     "clsx": "^2.1.1",
     "dialog": "^0.3.1",
-    "express": "^4.19.2",
+    "express": "^4.21.2",
     "firebase": "^11.0.1",
     "framer-motion": "^11.15.0",
     "gsap": "^3.12.5",
