Describe your latest changes here

--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "start": "node server.cjs"
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "start": "serve -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -38,6 +37,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
     "react-swipeable-views-react-18-fix": "^0.14.1",
+    "serve": "^14.2.4",
     "shadcn-ui": "^0.2.3",
     "spline": "^0.0.0",
     "styled-components": "^6.1.13",
